@@ -13,5 +13,5 @@ Disassembly of section .text:
 0+0c <[^>]*> 012fff20 ?	bxjeq	r0
 0+10 <[^>]*> 412fff20 ?	bxjmi	r0
 0+14 <[^>]*> 512fff27 ?	bxjpl	r7
-0+18 <[^>]*> e1a00000 ?	nop[ 	]+\(mov r0,r0\)
-0+1c <[^>]*> e1a00000 ?	nop[ 	]+\(mov r0,r0\)
+0+18 <[^>]*> e1200070 ?	bkpt	0x0000
+0+1c <[^>]*> e120007a ?	bkpt	0x000a
