@@ -7,8 +7,6 @@ label:
 	bxjeq	r0
 	bxjmi	r0
 	bxjpl	r7
-	
-	# Add two nop instructions to ensure that the output
-	# is aligned as will automatically be done for arm-aout.
-	nop
-	nop
+
+	bkpt		@ Support for a breakpoint without an argument
+	bkpt	10	@ is a feature added to GAS.
