@@ -1,3 +1,9 @@
+2002-11-29  Nick Clifton  <nickc@redhat.com>
+
+	* gas/arm/arch5tej.s: Replace "nop"s with tests of breakpoint
+	instruction.
+	* gas/arm/arch5tej.d: Expect "bkpt"s not nops.
+
 2002-11-26  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gas/cris/rd-bcnst.d, gas/cris/rd-bcnst.d: New test.
