@@ -1,3 +1,9 @@
+2002-11-29  Nick Clifton  <nickc@redhat.com>
+
+	* config/tc-arm.c (do_t_bkpt): If no operand is specified,
+	assume a value of zero.
+	(do_bkpt): Likewise.
+
 2002-11-29  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* config/tc-sh.c (md_apply_fix3): Call S_SET_THREAD_LOCAL
